2006-12-07  Aaron Bockover  <abock@gnome.org>

	* data/images/: Excellent new playlist icons from Jimmac

2006-12-07  Aaron Bockover  <abock@gnome.org>

	* src/PlaylistView.cs: Fix the sort order for the track number column
	to properly sort by artist, album, then track number; sorting by track
	number is now the most logical sort/group operation

2006-12-07  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.Base/ActionManager.cs: Don't set the default string 
	for the source properties label here

	* src/Banshee.Base/Source.cs: Added SourcePropertiesLabel and 
	SourcePropertiesIcon virtual properties; set the default string here now

	* src/Banshee.Base/SourceManager.cs: Assign the source properties action
	its label and icon based on the active source's SourcePropertiesLabel
	and SourcePropertiesIcon properties

	* src/Banshee.Base/Banshee.SmartPlaylist/SmartPlaylistSource.cs: Override
	the SourcePropertiesLabel to 'Edit Smart Playlist...' as it makes a lot 
	more sense than 'Source Properties...'

2006-12-07  Aaron Bockover  <abock@gnome.org>

	* src/Banshee.MediaEngine/Gstreamer/GstPlayerEngine.cs: Handle the 
	MissingPlugins error code

	* Gabriel Burt: The next time you see this man, buy him some beer.

2006-12-07  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/PlayerInterface.cs: Handle multiple tracks being added or removed at
	once in OnSourceTrackAdded/Removed.

	* src/PlaylistModel.cs: Add helpers for turning off and then restoring the
	sort order of the model, useful b/c otherwise when doing many additions or
	removals from the model it sorts after each one.  Fixes BGO #325968.

	Also, actually do something in RemoveTrack, fixes BGO #344833.

	* src/Banshee.Base/Source.cs: Make TrackEventArgs an ICollection instead
	of IEnumerable so we can get a Count easily.  Support sending multiple
	tracks with the OnTrackAdded and OnTrackRemoved helpers.

	* src/Banshee.Base/Banshee.SmartPlaylist/Editor.cs: whitespace.
