@@ -1,5 +1,12 @@
 2006-12-07  Aaron Bockover  <abock@gnome.org>
 
+	* src/PlaylistModel.cs: Save/restore the sort ID from the active source
+
+	* src/Banshee.Base/Source.cs: Added SortColumn and SortType properties
+	to allow for saving the sort ID along with the source and not globally
+
+2006-12-07  Aaron Bockover  <abock@gnome.org>
+
 	* data/images/: Excellent new playlist icons from Jimmac
 
 2006-12-07  Aaron Bockover  <abock@gnome.org>
